--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodeman": "^1.1.2",
-    "sha256": "^0.2.0"
+    "sha256": "^0.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
